--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,35 @@
-# Node.js
-node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Next.js build artifacts
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
 /.next/
+/out/
 
-# IDE
-.vscode/
+# production
+/build
 
-# macOS
+# misc
 .DS_Store
+*.pem
 
-# Log files
-*.log
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Environment variables
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
-.env.development
-.env.test
-.env.production
+# local env files
+.env*.local
 
-# Cache directories
-.cache/
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
